--- a/bin/layout/InventoryPageLayout.fxml
+++ b/bin/layout/InventoryPageLayout.fxml
@@ -1,14 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Accordion?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
 
-<Pane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="900.0" style="-fx-background-color: #D8D8D8;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.InventoryPage">
+<Pane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="517.0" prefWidth="690.0" style="-fx-background-color: #D8D8D8;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.InventoryPage">
    <children>
-      <HBox layoutX="-1.0" prefHeight="100.0" prefWidth="800.0" style="-fx-background-color: #FFFFFF;">
+      <HBox layoutX="-1.0" prefHeight="101.0" prefWidth="690.0" style="-fx-background-color: #FFFFFF;">
          <children>
             <ImageView fitHeight="60.0" fitWidth="60.0" onMouseClicked="#salesPage" pickOnBounds="true" preserveRatio="true">
                <image>
@@ -41,6 +44,16 @@
             <Image url="@../../homeicon.png" />
          </image>
       </ImageView>
+      <Accordion layoutX="14.0" layoutY="107.0" />
+      <TableView fx:id="table" layoutY="100.0" prefHeight="415.0" prefWidth="690.0">
+        <columns>
+          <TableColumn fx:id="id" prefWidth="145.0" text="ID" />
+          <TableColumn fx:id="iName" prefWidth="140.0" text="ItemName" />
+            <TableColumn fx:id="pQuatity" minWidth="0.0" prefWidth="132.0" text="PurchasedQuatity" />
+            <TableColumn fx:id="uQuatity" prefWidth="128.6666259765625" text="UsedQuatity" />
+            <TableColumn fx:id="price" prefWidth="134.0" text="Price" />
+        </columns>
+      </TableView>
    </children>
    <padding>
       <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
