--- a/bin/layout/SalesPageLayout.fxml
+++ b/bin/layout/SalesPageLayout.fxml
@@ -55,8 +55,9 @@
                 <TableColumn fx:id="coffeeIDColumn" prefWidth="48.00000127156454" sortable="false" text="ID" />
                 <TableColumn fx:id="coffeeFlavourColumn" prefWidth="85.77777481079102" text="OrderName" />
                   <TableColumn fx:id="coffeeMilkColumn" prefWidth="60.22222900390625" sortable="false" text="Milk" />
-                  <TableColumn fx:id="coffeeSizeColumn" prefWidth="49.5555419921875" sortable="false" text="Size" />
-                  <TableColumn fx:id="coffeePriceColumn" prefWidth="145.33335876464844" sortable="false" text="Price" />
+                  <TableColumn fx:id="coffeeSizeColumn" prefWidth="55.55560302734375" sortable="false" text="Size" />
+                  <TableColumn fx:id="coffeeExtraColumn" prefWidth="55.55560302734375" sortable="false" text="Extras" />
+                  <TableColumn fx:id="coffeePriceColumn" prefWidth="141.11106872558594" sortable="false" text="Price" />
               </columns>
             </TableView>
          </children>
