--- a/bin/layout/SalesPageLayout.fxml
+++ b/bin/layout/SalesPageLayout.fxml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.MenuButton?>
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.effect.InnerShadow?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.HBox?>
@@ -52,12 +54,12 @@
          <children>
             <TableView fx:id="orderTableView" editable="true" maxWidth="328.0" prefHeight="161.0" prefWidth="328.0">
               <columns>
-                <TableColumn fx:id="coffeeIDColumn" prefWidth="48.00000127156454" sortable="false" text="ID" />
-                <TableColumn fx:id="coffeeFlavourColumn" prefWidth="85.77777481079102" text="OrderName" />
-                  <TableColumn fx:id="coffeeMilkColumn" prefWidth="60.22222900390625" sortable="false" text="Milk" />
-                  <TableColumn fx:id="coffeeSizeColumn" prefWidth="55.55560302734375" sortable="false" text="Size" />
-                  <TableColumn fx:id="coffeeExtrasColumn" prefWidth="55.55560302734375" sortable="false" text="Extras" />
-                  <TableColumn fx:id="coffeePriceColumn" prefWidth="141.11106872558594" sortable="false" text="Price" />
+                <TableColumn fx:id="coffeeIDColumn" prefWidth="22.444398244220793" sortable="false" text="ID" />
+                <TableColumn fx:id="coffeeFlavourColumn" prefWidth="80.22228050231934" text="OrderName" />
+                  <TableColumn fx:id="coffeeSizeColumn" prefWidth="31.77771759033203" sortable="false" text="Size" />
+                  <TableColumn fx:id="coffeeMilkColumn" prefWidth="46.44439697265625" sortable="false" text="Milk" />
+                  <TableColumn fx:id="coffeeExtrasColumn" prefWidth="87.99992370605469" sortable="false" text="Extras" />
+                  <TableColumn fx:id="coffeePriceColumn" prefWidth="183.99993896484375" sortable="false" text="Price" />
               </columns>
             </TableView>
          </children>
@@ -126,17 +128,16 @@
       </ImageView>
       <VBox layoutX="550.0" layoutY="331.0" prefHeight="266.0" prefWidth="350.0" style="-fx-background-color: #FFFFFF; -fx-border-color: #00FFFF;">
          <children>
-            <Label prefHeight="40.0" prefWidth="250.0" text="Subtotal" />
-            <Label prefHeight="40.0" prefWidth="250.0" text="DIscount" />
-            <Label prefHeight="40.0" prefWidth="250.0" text="GST" />
-            <Label prefHeight="40.0" prefWidth="250.0" text="Total" />
+            <Label prefHeight="40.0" prefWidth="69.0" text="DIscount" />
+            <Label prefHeight="40.0" prefWidth="46.0" text="GST" />
+            <Label prefHeight="40.0" prefWidth="53.0" text="Total" />
             <Label prefHeight="60.0" prefWidth="355.0" style="-fx-background-color: #00FFFF;" text="Pay" translateY="30.0">
                <font>
                   <Font name="System Bold" size="18.0" />
                </font></Label>
          </children>
       </VBox>
-      <MenuButton fx:id="coffeeSize" layoutX="66.0" layoutY="444.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="120.0" text="Size">
+      <MenuButton fx:id="coffeeSize" layoutX="65.0" layoutY="446.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="120.0" text="Size">
         <items>
           <MenuItem mnemonicParsing="false" onAction="#small" text="Small" />
           <MenuItem mnemonicParsing="false" onAction="#medium" text="Medium" />
@@ -146,7 +147,7 @@
             <Font name="Century Gothic" size="18.0" />
          </font>
       </MenuButton>
-      <MenuButton fx:id="coffeeExtra" layoutX="352.0" layoutY="448.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="120.0" text="Extras">
+      <MenuButton fx:id="coffeeExtra" layoutX="387.0" layoutY="446.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="120.0" text="Extras">
         <items>
           <MenuItem mnemonicParsing="false" onAction="#onEspressoShot" text="Espresso Shot" />
           <MenuItem mnemonicParsing="false" onAction="#onExtraFlavour" text="Flavours" />
@@ -156,7 +157,7 @@
             <Font size="18.0" />
          </font>
       </MenuButton>
-      <MenuButton fx:id="coffeeMilk" layoutX="183.0" layoutY="446.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="120.0" text="Milk">
+      <MenuButton fx:id="coffeeMilk" layoutX="213.0" layoutY="447.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="120.0" text="Milk">
         <items>
           <MenuItem mnemonicParsing="false" onAction="#onRegular" text="Regular" />
           <MenuItem mnemonicParsing="false" onAction="#onSkimmed" text="Skimmed" />
@@ -167,6 +168,22 @@
             <Font name="Century Gothic" size="18.0" />
          </font>
       </MenuButton>
+      <Button fx:id="pricePerCoffee" alignment="CENTER" contentDisplay="CENTER" layoutX="46.0" layoutY="496.0" mnemonicParsing="false" onAction="#pricePerCoffee" onMouseClicked="#pricePerCoffee" prefHeight="38.0" prefWidth="109.0" style="-fx-background-color: #FFFFFF;" text="Price" textAlignment="CENTER">
+         <font>
+            <Font name="Century Gothic" size="16.0" />
+         </font>
+         <effect>
+            <InnerShadow />
+         </effect>
+      </Button>
+      <Button alignment="CENTER" contentDisplay="CENTER" layoutX="350.0" layoutY="484.0" mnemonicParsing="false" onMouseClicked="#complete" prefHeight="38.0" prefWidth="109.0" style="-fx-background-color: #FFFFFF;" text="Price" textAlignment="CENTER">
+         <font>
+            <Font name="Century Gothic" size="16.0" />
+         </font>
+         <effect>
+            <InnerShadow />
+         </effect>
+      </Button>
    </children>
    <padding>
       <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
