--- a/bin/layout/ReportPageLayout.fxml
+++ b/bin/layout/ReportPageLayout.fxml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.chart.CategoryAxis?>
 <?import javafx.scene.chart.LineChart?>
@@ -14,7 +13,7 @@
 <Pane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="900.0" style="-fx-background-color: #D8D8D8;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.ReportPage">
    <children>
       <HBox layoutX="-1.0" prefHeight="100.0" prefWidth="513.0" style="-fx-background-color: #FFFFFF;">
-         <children>"src/layout/SalesPageLayout.fxml"
+         <children>
             <ImageView fitHeight="60.0" fitWidth="60.0" onMouseClicked="#salesPage" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../../sellIicon.png" />
@@ -23,7 +22,7 @@
                   <Insets left="150.0" top="25.0" />
                </HBox.margin>
             </ImageView>
-            <ImageView fitHeight="60.0" fitWidth="60.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="60.0" fitWidth="60.0" onMouseClicked="#inventoryPage" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../../reporticon.png" />
                </image>
@@ -31,7 +30,7 @@
                   <Insets left="50.0" top="25.0" />
                </HBox.margin>
             </ImageView>
-            <ImageView fitHeight="70.0" fitWidth="70.0" onMouseClicked="#inventoryPage" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="70.0" fitWidth="70.0"  pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../../inventory%20icon.png" />
                </image>
